# OpenGL-RenderEngine

./: .gitignore  CMakeLists.txt  build.sh  run.sh  test.sh
src/: Camera.cpp  Camera.hpp  Loader.cpp  Loader.h  Window.cpp  Window.hpp  main.cpp
src/shaders/: AbstractShaderProgram.cpp  AbstractShaderProgram.h
src/shaders/static/: StaticShaderProgram.cpp  StaticShaderProgram.h
src/util/: Array.hpp
test/: main.cpp
